@@ -122,6 +122,7 @@ my (
     $sharedWorkersSupport,
     $sqlDatabaseSupport,
     $styleScopedSupport,
+    $subtleCrypto,
     $suidLinuxSandbox,
     $svgDOMObjCBindingsSupport,
     $svgFontsSupport,
@@ -374,6 +375,9 @@ my @features = (
 
     { option => "sql-database", desc => "Toggle SQL Database support",
       define => "ENABLE_SQL_DATABASE", default => 1, value => \$sqlDatabaseSupport },
+
+    { option => "subtle-crypto", desc => "Toggle WebCrypto Subtle-Crypto support",
+      define => "ENABLE_SUBTLE_CRYPTO", default => (isGtk() || isAppleMacWebKit() || isIOSWebKit()), value => \$subtleCrypto },
 
     { option => "suid-linux-sandbox", desc => "Toggle suid sandbox for linux",
       define => "ENABLE_SUID_SANDBOX_LINUX", default => 0, value => \$suidLinuxSandbox },
